syntax = "proto3";

package graplinc.grapl.pipeline.v1beta1;

import "google/protobuf/any.proto";
import "graplinc/common/v1beta1/types.proto";

// A wrapper message for pipeline data. Includes useful metadata to help
// services determine what they should do with the inner_message.
message Envelope {
  // A tenant (e.g. a customer) in Grapl
  graplinc.common.v1beta1.Uuid tenant_id = 1;

  // An operation (e.g. a request) across Grapl services
  graplinc.common.v1beta1.Uuid trace_id = 2;

  // Number of times this message has been retried
  uint32 retry_count = 3;

  // When the envelope was first created
  graplinc.common.v1beta1.Timestamp created_time = 4;

  // When the envelope was last updated (e.g. retry count incremented)
  graplinc.common.v1beta1.Timestamp last_updated_time = 5;

  // Event source from which the inner_message originated
  graplinc.common.v1beta1.Uuid event_source_id = 6;

  // The serialized bytes of the inner message, along with its type
  google.protobuf.Any inner_message = 7;
}

// This is the inner_message for an Envelope published to the raw-logs topic.
message RawLog {
  // A raw log event (to be parsed by a generator plugin)
  bytes log_event = 1;
}
